# pydeequ3

./: .coveragerc  .deepsource.toml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  PreCommit.MD  README.md  codecov.yml  pyproject.toml
.github/workflows/: build_test.yml  codeql-analysis.yml  lint_checkers.yml  lint_commits.yml  publish_pypi.yml
dev/: change-scala-version.sh  tests.sh
pydeequ/: analyzers.py  anomaly_detection.py  checks.py  pandas_utils.py  profiles.py  repository.py  scala_utils.py  suggestions.py
pydeequ3/: __init__.py  analyzers.py  checks.py  pandas_utils.py  profiles.py  repository.py  scala_utils.py  suggestions.py  verification.py
tests/: conftest.py  test_analyzers.py  test_anomaly_detection.py  test_checks.py  test_pandas_utils.py  test_profiles.py  test_pydeequ.py  test_repository.py  test_scala_utils.py  test_suggestions.py
