[tool.poetry]
name = "pydeequ3"
version = "0.1.6"
description = "Pydeequ3: PySpark 3 support for deequ [AWSClone]"
authors = ["ChethanUK <chethanuk@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.3"
pandas = "^1.2.4"
pyspark = { version = ">=2.4.7", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-runner = "^5.3.0"
pytest-xdist = {extras = ["psutil"], version = "^2.2.1"}
#pytest-parallel = "^0.1.0"
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
pytest-flake8 = "^1.0.7"
pre-commit = "^2.12.1"
pytest-rerunfailures = "^9.1.1"
twine = "^3.4.1"
pytest-cov = "^2.11.1"
safety = "^1.10.3"

[tool.poetry.extras]
pyspark = ["pyspark"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | htmlcov
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
line_length = 120
indent = '    '
multi_line_output = 3
include_trailing_comma = true
#force_grid_wrap = 0
atomic = true
#lines_after_imports = 2
#lines_between_types = 1
skip_glob = ['__init__.py']
#src_paths=isort,test

[mypy]
python_version = 3.8
#warn_return_any = True
#warn_unused_configs = True

#[mypy-pyspark.*]
#ignore_missing_imports = True

[pytest]
testpaths = "tests"
norecursedirs = ".git .* *.egg* old docs dist build"
cache_dir = "./.pytest_cache"
python_files = "*test_*.py"
